# tasker

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  build.sh  install.sh  tasker.install
lib/tasker_lib/: Cargo.toml  README.md
lib/tasker_lib/src/: config.rs  connect_db.rs  enums.rs  error_handler.rs  lib.rs  log_db.rs  notify.rs  root_key_request.rs  secret.rs  secure.rs  shell.rs  structs.rs  tasker_logic.rs  tasks_db.rs  tests.rs  time.rs
