[package]
name = "tasker"
version = "0.0.1"
edition = "2021"
description = "A simple crate for time based tasks"
license = "GPL-3.0"
authors = ["Daniel M. email:danielmadmon@protonmail.com"]
repository = "https://github.com/DanielMadmon/tasker"
homepage = "https://github.com/DanielMadmon/tasker"

[workspace]
members = [
    "lib/tasker_lib",
    "bin/tasker_service",
    "bin/taskerctl"
]
[lib]
name ="tasker_lib"
path = "lib/tasker_lib/src/lib.rs"
test = false
crate-type = ["lib"] 

[[bin]]
name = "tasker_service"
path = "bin/tasker_service/src/main.rs"
test = false

[[bin]]
name = "taskerctl"
path = "bin/taskerctl/src/main.rs"
test = false
 
[dependencies]
clap = {version = "4.3.0", features = ["derive"]}
comfy-table = "6.1.4"
derive = "1.0.0"
features = "0.10.0"
hostname = "0.3.1"
simple-home-dir = "0.1.2"
sysinfo = "0.29.0"
terminal-text-styler = "0.1.0"
chrono = "0.4.24"
cryptex = "1.4.0"
notify-rust = "4.8.0"
random-string = "1.0.0"
rayon = "1.7.0"
readable-perms = "0.1.3"
rusqlite = "0.29.0"
sudo = "0.6.0"
themis = "0.14.0"