[package]
name = "tasker_lib"
version = "0.0.1"
edition = "2021"
description = "A simple crate for time based tasks"
license = "GPL-3.0"
authors = ["Daniel M. email:danielmadmon@protonmail.com"]
repository = "https://github.com/DanielMadmon/tasker"
homepage = "https://github.com/DanielMadmon/tasker"

[dependencies]
chrono = "0.4.24"
cryptex = "1.4.0"
notify-rust = "4.8.0"
random-string = "1.0.0"
rayon = "1.7.0"
readable-perms = "0.1.3"
rusqlite = "0.29.0"
simple-home-dir = "0.1.2"
sudo = "0.6.0"
sysinfo = "0.29.0"
themis = "0.14.0"


